Fixed spacing and added a bunch of stuff. Can't even remember anymore.

--- a/CV.css
+++ b/CV.css
@@ -22,6 +22,10 @@ ul {
 	list-style-type: none;
 }
 
+li {
+	margin: 0 0 10px 0;
+}
+
 .contact {
 	float-defer-column: last;
 }
